# QuackTools

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  cloc-report.json
data/media/: duck_bkp.xpm
include/: aes256.hpp  base64.hpp  diffie_hellman.hpp  file_operations.hpp  gui.hpp  sha256.hpp  steganography.hpp
sample/: aes256_sample.cpp  base64_sample.cpp  diffiehellman_sample.cpp  main.cpp  sha256_sample.cpp  steganography_sample.cpp
script/: install_gtk3.sh  install_jsoncpp.sh  install_opencv.sh  install_wxgtk3.sh
source/: CMakeLists.txt
source/include/: log_operations.hpp
source/src/: aes256.cpp  base64.cpp  diffie_hellman.cpp  file_operations.cpp  gui.cpp  log_operations.cpp  sha256.cpp  steganography.cpp
tests/: CMakeLists.txt  catch.hpp  tests_headers.hpp  tests_sha256.cpp  tests_unit.cpp  tests_unit.hpp
